component-library/src/styles/component-overrides.css
/** Custom styles to fix primevue components that are not custom or wrapped. */

/**
* GUTTER FIX
* Primevue's dropwdown components are all missing the gap between input and dropdown
**/
.p-autocomplete-overlay,
.p-menu-overlay,
.p-multiselect-overlay,
.p-select-overlay,
.p-treeselect-overlay {
	margin: var(--p-anchor-gutter) 0;
}

/* This fix is to ensure overlay badge is contained within the size of the component it wraps */
.p-overlaybadge {
	display: inline-block;
}

/**
* BccAutocomplete
**/

/** Our icons are a bit smaller that Primevue's default */
.p-autocomplete .p-icon {
	--p-icon-size: var(--icon-size-sm);
	--p-form-field-sm-font-size: var(--icon-size-sm);
	--p-form-field-lg-font-size: var(--icon-size-md);
}

.p-autocomplete .p-autocomplete-clear-icon {
	/** middle-align the icon */
	top: calc(50% - var(--icon-size-sm) / 2);
	margin-top: 0;
}

.p-autocomplete-clearable .p-inputtext {
	flex-grow: 1;
}

.p-autocomplete-chip.p-chip {
	padding-block-start: calc(var(--p-autocomplete-padding-y) / 2);
	padding-block-end: calc(var(--p-autocomplete-padding-y) / 2);
	border-radius: var(--p-autocomplete-chip-border-radius);
}

/**
* BccSelect
**/
.p-select {
	--p-icon-size: var(--icon-size-sm);
}

.p-select.inline-select {
	@apply mx-auto inline-flex w-auto items-center border-0 bg-transparent shadow-none;
	--p-icon-size: 1.25em;
	--p-select-dropdown-width: 1.5em;
	--p-select-min-height: auto;
}

.p-select.inline-select .p-select-label {
	@apply inline-block font-semibold;
	font-size: inherit;
	padding: 0 0 0 0.25em;
}

.p-select.inline-select.inverse {
	--p-select-color: var(--color-neutral-0);
	--p-select-dropdown-color: var(--color-neutral-0);
	--p-select-placeholder-color: var(--color-dark-neutral-1000);
}

/** 
* Fix issue with icons inside Input within an InputGroup being hidden when Input is in focus
**/
.p-inputicon {
	z-index: 2;
}

.p-dialog-close-button .p-icon {
	height: var(--icon-size-sm);
	width: var(--icon-size-sm);
}
.p-dialog .p-button-icon:empty {
	display: none;
}

